--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "track-me",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,10 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.4",
     "expo": "~46.0.16",
+    "expo-auth-session": "~3.7.1",
+    "expo-checkbox": "~2.2.0",
+    "expo-google-sign-in": "^11.0.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-optimize": "^0.2.20",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-step-indicator": "^0.1.2",
+    "expo-updates": "~0.14.7",
+    "expo-web-browser": "~11.0.0",
+    "firebase": "9.6.11",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "expo-local-authentication": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
